[package]
name = "lobstr"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "CLI for lobste.rs"
license = "MIT"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
colored = "3.1.1"
html2text = "0.16.6"
scraper = "0.25.0"
url = "2"
llm_readability = "0.0.11"
yt-transcript-rs = "0.1.8"
termimad = "0.34.1"
dirs = "6"
toml = "0.8"
crossterm = "0.29"

[profile.release]
lto = true
strip = true
